# SCISDK

./: .gitignore  .gitlab-ci.yml  .gitlab-cy.yml  2dhistogram_8md.html  CHANGELOG.md  Doxyfile  Makefile.am  README.md  _n_i_error_code_8h.html  _n_i_error_code_8h.js  _n_i_error_code_8h__incl.dot  _n_i_error_code_8h_source.html  _r_e_a_d_m_e_8md.html  _sci_s_d_k___d_l_l_8h.html  _sci_s_d_k___d_l_l_8h.js  _sci_s_d_k___d_l_l_8h__incl.dot  _sci_s_d_k___d_l_l_8h_source.html  _v2495_8md.html  annotated.html  annotated_dup.js  boardendpoint_8md.html  build.ps1  build_setup.ps1  citiroc-config_8md.html  citiroc-frame_8md.html  classes.html  compile_all_architecures.sh  compile_deb.sh  compile_for_zynq.sh  configure  configure.ac  custom.css  custompacket_8md.html  digitizer_8md.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_f8a24263259c2e7849a77ce7345c3e8a.html  dir_f8a24263259c2e7849a77ce7345c3e8a_dep.dot  (+259 more)
.github/workflows/: doc_build.yml
.gitlab-ci/: build-jobs.yml  build-sign-setup.yml  get-caen-lib-windows.yml  ni-releases.yml  push-packages.yml  retrieve-artifacts.yml  variables.yml
.ni/: ni-release-setup.yaml  ni-release-source.yaml  pippolina.yml
SciSDK_VC++/: SciSDK_VC++.sln
SciSDK_VC++/SciSDK_DLL/: SciSDK_DLL.vcxproj  SciSDK_DLL.vcxproj.filters  cpp.hint
SciSDK_VC++/SciSDK_DLL_Test/: ReadMe.txt  SciSDK_DLL_Test.cpp  SciSDK_DLL_Test.vcxproj  SciSDK_DLL_Test.vcxproj.filters  stdafx.cpp
SciSDK_VC++/SciSDK_Info/: SciSDK_DLL_Info.vcxproj  SciSDK_DLL_Info.vcxproj.filters  stdafx.cpp
SciSDK_VC++/SciSDK_Labview/: SciSDK_Labview.vcxproj  SciSDK_Labview.vcxproj.filters  SciSDK_Labview_DLL.cpp  SciSDK_Labview_DLL.h  cpp.hint
SciSDK_VC++/SciSDK_Static/: ReadMe.txt  SciSDK_Static.vcxproj  SciSDK_Static.vcxproj.filters  stdafx.cpp
SciSDK_VC++/SciSDK_VC++/: Citiroc.json  DT5560.json  ReadMe.txt  SCIDKTester.json  SciSDK_VC++.cpp  SciSDK_VC++.vcxproj  SciSDK_VC++.vcxproj.filters  fake_citiroc.json  stdafx.cpp
armhf/: armv7-a-linux-gnu-libtool  config.status  libtool
armhf/src/: SciSDK_DLL.lo  scisdk_DT5550W_citirocconfig.lo  scisdk_DT5550W_petirocframe.lo  scisdk_core.lo  scisdk_digitizer.lo  scisdk_fftmon.lo  scisdk_frame.lo  scisdk_list.lo  scisdk_rate_meter.lo  scisdk_registers.lo  scisdk_scinode.lo
build_zynq/: arm-xilinx-linux-gnueabi-libtool  config.status
build_zynq/src/: scisdk_DT5550W_citirocframe.lo  scisdk_SciElement.lo  scisdk_TOFspectrum.lo  scisdk_custom_packet.lo  scisdk_device.lo  scisdk_hal.lo  scisdk_oscilloscope.lo  scisdk_oscilloscope_dual.lo  scisdk_register.lo  scisdk_spectrum.lo
docs/: 2dhistogram.md  README.md  boardendpoint.md  citiroc-config.md  citiroc-frame.md  custompacket.md  digitizer.md  fft.md  frame.md  list.md  logicanalyser.md  mmc.md  opendpp.md  openscope.md  oscilloscope-dual.md  oscilloscope.md  petiroc-config.md  petiroc-frame.md  rate-meter.md  registers-file.md  registers.md  spectrum.md  tof-spectrum.md
docs/boards/: V2495.md  dt1260.md  dt5550  dt5550w_citiroc.md  dt5550w_petiroc  dt5550w_petiroc.md  dt5771.md  opendpp.md  openscope.md  x5560.md  x5560se.md
doxygen-custom/: header.html
examples/C++/: scisdk_examples.sln
examples/firmware/: .gitignore
headers/: SCIDK_API_C.h  SCISDK_LV_API.h  scisdk.hpp
headers/matlab/: Matlab_SciSDK_DLL.h  Matlab_scisdk_defines_flat.h
linux_test/: RegisterFile.json  main.cpp
linuxbuild/: armv7-a-linux-gnu-libtool  config.status  libtool
linuxbuild/src/: SciSDK_DLL.lo  scisdk_DT5550W_citirocconfig.lo  scisdk_DT5550W_citirocframe.lo  scisdk_DT5550W_petirocframe.lo  scisdk_SciElement.lo  scisdk_TOFspectrum.lo  scisdk_core.lo  scisdk_custom_packet.lo  scisdk_device.lo  scisdk_digitizer.lo  scisdk_fftmon.lo  scisdk_frame.lo  scisdk_hal.lo  scisdk_list.lo  scisdk_oscilloscope.lo  scisdk_oscilloscope_dual.lo  scisdk_rate_meter.lo  scisdk_register.lo  scisdk_registers.lo  scisdk_scinode.lo  scisdk_spectrum.lo
scripts/: push_packages.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  (+55 more)
src/: Makefile.am  NIErrorCode.h  SciSDK_DLL.cpp  SciSDK_DLL.h  magic_numbers.h  scidk_oscilloscope.cpp  scidk_oscilloscope.h  scisdk_2dhistogram.cpp  scisdk_2dhistogram.h  scisdk_DT5550W-CITIROC.cpp  scisdk_DT5550W-CITIROC.h  scisdk_DT5550W_citirocconfig.cpp  scisdk_DT5550W_citirocconfig.h  scisdk_DT5550W_citirocframe.cpp  scisdk_DT5550W_citirocframe.h  scisdk_DT5550W_petirocframe.cpp  scisdk_DT5550W_petirocframe.h  scisdk_SciElement.cpp  scisdk_SciElement.h  scisdk_TOFspectrum.cpp  scisdk_TOFspectrum.h  scisdk_core.cpp  scisdk_core.h  scisdk_custom_packet.cpp  scisdk_custom_packet.h  scisdk_defines.h  scisdk_device.cpp  scisdk_device.h  scisdk_digitizer.cpp  scisdk_digitizer.h  scisdk_fftmon.cpp  scisdk_fftmon.cpp.bak  scisdk_fftmon.h  scisdk_fftmon.h.bak  scisdk_frame.cpp  scisdk_frame.h  scisdk_hal.cpp  scisdk_hal.h  scisdk_list.cpp  scisdk_list.h  (+17 more)
src/.claude/: settings.local.json
src/boards_driver/: bd_common.h  bd_dt1260.cpp  bd_dt1260.h  bd_dt4810.cpp  bd_dt4810.h  bd_dt5560se.cpp  bd_dt5560se.h  bd_dt5771.cpp  bd_dt5771.h  bd_feelib.cpp  bd_feelib.cpp.bak  bd_feelib.h  bd_v2495.cpp  bd_v2495.h  bd_x5560se.cpp  bd_x5560se.h
tools/src/: SciSDK_DLL_Info.cpp
wrapper/CSharp_SciSDK/: CSharp_SciSDK.sln
wrapper/LabView/: SciSDK.mnu  SciSDK_Labview.lvlib  dir.mnu
wrapper/Typescript/: .gitignore  README.md  package-lock.json  package.json  scisdk_test.ts  tsconfig.json
wrapper/py_SciSDK/scisdk/: README.md  pyproject.toml  scisdk.py  scisdk_defines.py
wrapper/py_SciSDK/scisdk/src/: scisdk.py
wrapper/py_SciSDK/scisdk/src/scisdk/: scisdk.py  scisdk_defines.py
(+667 files in other folders)
