[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scisdk"
version = "1.4"
authors = [
  { name="Andrea Abba", email="abba@nuclearinstruments.eu" },
]
description = "SDK for SciCompiler generated firmware"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["SciCompiler", "firmware", "fpga", "Nuclear Instruments", "CAEN"]
dependencies = [
]
[project.urls]
"Homepage" = "https://github.com/NuclearInstruments/SCISDK"
"Bug Tracker" = "https://github.com/NuclearInstruments/SCISDK/issues"
